# deribit-base

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/: dependabot.yml
.github/workflows/: build.yml  code_coverage.yml  lint.yml  semver.yml
doc/: DeribitAPI.md
src/: common.rs  constants.rs  error.rs  lib.rs  prelude.rs  types.rs
src/error/: codes.rs  conversions.rs  mod.rs  types.rs
src/model/: account.rs  block_trade.rs  book_summary.rs  combo.rs  config.rs  currency.rs  extended_market_data.rs  funding.rs  instrument.rs  market_data.rs  mod.rs  options.rs  order.rs  order_management.rs  position.rs  request.rs  response.rs  settlement.rs  ticker.rs  trade.rs  transaction.rs  transfer.rs  wallet.rs
src/utils/: mod.rs  tools.rs
