[package]
name = "deribit-base"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Base library with common structs, traits, and logic for Deribit API clients"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-base"
homepage = "https://github.com/joaquinbejar/deribit-base"
keywords = ["finance", "deribit", "trading", "api"]
categories = ["finance", "data-structures", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

