[package]
name = "deribit-base"
version = "0.1.2"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Base library with common structs, traits, and logic for Deribit API clients"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-base"
homepage = "https://github.com/joaquinbejar/deribit-base"
keywords = ["finance", "deribit", "trading", "api"]
categories = ["finance", "data-structures", "api-bindings"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
